fixed the navbar toggler width to prevent jumps

--- a/src/style/theme/components/_navbar.scss
+++ b/src/style/theme/components/_navbar.scss
@@ -23,6 +23,7 @@ $navbar-height-sm: 3.125rem;
         color: $white;
         padding: 0;
         border: 0;
+        width: 1.5rem;
         .dropdown-icon-open {
             display: inline-block;
         }
